RA-388: Visually wage editing looks complete. Needs manual testing

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/EditWage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/EditWage.cshtml
@@ -15,7 +15,7 @@
 @using (Html.BeginRouteForm(RecruitmentRouteNames.EditWage, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, FormMethod.Post, new { id = "edit-wage-form" }))
 {
     <div>
-        @if (Model.ExistingWage.Type != WageType.Custom && Model.ExistingWage.Type != WageType.CustomRange)
+        @if (Model.Classification != WageClassification.Custom)
         {
             <h3 id="current-wage-header" class="bold-small">Current wage</h3>
         }
@@ -61,21 +61,28 @@
             }
             <div class="form-group @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Type))">
                 @* ReSharper disable once Html.IdNotResolved *@
-                <label id="national-minimum-wage-radio-label" for="national-minimum-wage" class="block-label selection-button-radio @(Model.ExistingWage.Type == WageType.ApprenticeshipMinimum || Model.ExistingWage.Type == WageType.Unwaged ? "" : "hidden")">
+                <label id="national-minimum-wage-radio-label" for="national-minimum-wage" class="selection-button-radio @(Model.ExistingWage.Type == WageType.ApprenticeshipMinimum || Model.ExistingWage.Type == WageType.Unwaged ? "block-label" : "hidden")">
                     @Html.RadioButtonFor(model => model.Classification, WageClassification.NationalMinimum, new {id = "national-minimum-wage", aria_controls = "wage-type-panel"})
                     National Minimum Wage
                 </label>
                 @* ReSharper disable once Html.IdNotResolved *@
-                <label id="apprenticeship-minimum-wage-radio-label" for="apprenticeship-minimum-wage" class="block-label selection-button-radio @(Model.ExistingWage.Type == WageType.Unwaged ? "" : "hidden")">
+                <label id="apprenticeship-minimum-wage-radio-label" for="apprenticeship-minimum-wage" class="selection-button-radio @(Model.ExistingWage.Type == WageType.Unwaged ? "block-label" : "hidden")">
                     @Html.RadioButtonFor(model => model.Classification, WageClassification.ApprenticeshipMinimum, new {id = "apprenticeship-minimum-wage", aria_controls = "wage-type-panel"})
                     National Minimum Wage for apprentices
                 </label>
-                @* ReSharper disable once Html.IdNotResolved *@
-                <label id="custom-wage-radio-label" for="custom-wage" class="block-label selection-button-radio @(Model.ExistingWage.Type == WageType.ApprenticeshipMinimum || Model.ExistingWage.Type == WageType.Unwaged ? "" : "hidden")" data-target="custom-wage-panel">
-                    @Html.RadioButtonFor(model => model.Classification, WageClassification.Custom, new {id = "custom-wage", aria_controls = "wage-type-panel"})
-                    Custom wage
-                </label>
-                <div id="custom-wage-panel" class="toggle-content blocklabel-content nested-panel-1 clearfix">
+                @if (Model.ExistingWage.Type == WageType.ApprenticeshipMinimum || Model.ExistingWage.Type == WageType.Unwaged)
+                {
+                    @* ReSharper disable once Html.IdNotResolved *@
+                    <label id="custom-wage-radio-label" for="custom-wage" class="block-label selection-button-radio" data-target="custom-wage-panel">
+                        @Html.RadioButtonFor(model => model.Classification, WageClassification.Custom, new {id = "custom-wage", aria_controls = "wage-type-panel"})
+                        Custom wage
+                    </label>
+                }
+                else
+                {
+                    @Html.HiddenFor(model => model.Classification)
+                }
+                <div id="custom-wage-panel" class="toggle-content blocklabel-content nested-panel-1 clearfix" style="@(Model.Classification == WageClassification.Custom ? "display: block;": "")">
                     <div class="panel panel-border-narrow">
                         <fieldset class="form-group inline-fixed">
                             @if (Model.ExistingWage.Type == WageType.NationalMinimum || Model.ExistingWage.Type == WageType.ApprenticeshipMinimum || Model.ExistingWage.Type == WageType.Unwaged)
