--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
@@ -380,8 +380,8 @@
                             {
             <section id="other-information" class="grid-row">
                 <div class="column-two-thirds">
-                    <h2 class="heading-large collpanel-trigger">Other information</h2>
-                    <div class="collpanel toggle-content">
+                    <h2 class="heading-large sfa-collpanel-trigger">Other information</h2>
+                    <div class="sfa-collpanel toggle-content">
                         <div class="sfa-text-editor-generated @Model.OtherInformation.GetPreserveFormattingCssClass()">
                             @HtmlExtensions.EscapeHtmlEncoding(Html, Model.OtherInformation)
                         </div>
