--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchUpdate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchUpdate.cshtml
@@ -3,8 +3,8 @@
 
 <section class="column-one-third">
         <fieldset class="search-filter">
-            <legend class="heading-medium mob-collpanel-trigger" id="editSearchToggle">Edit search</legend>
-            <div class="mob-collpanel toggle-content--mob" id="editSearchPanel">
+            <legend class="heading-medium sfa-mob-collpanel-trigger" id="editSearchToggle">Edit search</legend>
+            <div class="sfa-mob-collpanel toggle-content--mob" id="editSearchPanel">
                 @if (Model.SearchMode == ApprenticeshipSearchMode.Category)
                 {
                     @Html.Partial("_categoriesAndSubCategories", Model);
