--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchUpdate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_searchUpdate.cshtml
@@ -2,8 +2,8 @@
 
 <section class="column-one-third">
         <fieldset class="search-filter">
-            <legend class="heading-medium mob-collpanel-trigger" id="editSearchToggle">Edit search</legend>
-            <div class="mob-collpanel toggle-content--mob" id="editSearchPanel">
+            <legend class="heading-medium sfa-mob-collpanel-trigger" id="editSearchToggle">Edit search</legend>
+            <div class="sfa-mob-collpanel toggle-content--mob" id="editSearchPanel">
 
                 
                     @Html.FormTextFor(m=>m.ReferenceNumber, "Reference number", controlHtmlAttributes: new { @class = "form-control-4-4" })
