--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/styles.css
@@ -102,6 +102,27 @@ Custom margins
     .sfa-xlarge-top-margin {
       margin-top: 30px !important; } }
 
+.sfa-p-margin-bottom {
+  margin-bottom: 1.05263em; }
+
+/* -------------------------------------------------------------------
+Removed Margins
+------------------------------------------------------------------- */
+.sfa-no-margins {
+  margin: 0 !important; }
+
+.sfa-no-right-margin {
+  margin-right: 0 !important; }
+
+.sfa-no-left-margin {
+  margin-left: 0 !important; }
+
+.sfa-no-bottom-margin {
+  margin-bottom: 0 !important; }
+
+.sfa-no-top-margin {
+  margin-top: 0 !important; }
+
 /* -------------------------------------------------------------------
 Custom padding
 ------------------------------------------------------------------- */
@@ -217,18 +238,6 @@ Text editor generated text
     .sfa-if-first:first-child .heading-small:first-child {
       margin-top: 0.26316em; } }
 
-/*
-.sfa-remove-heading-small-top-margin {
-    div:first-of-type {
-        .heading-small:first-of-type {
-            margin-top: 0.3125em;
-            @include media (tablet){
-                margin-top: 0.26316em
-            }
-        }
-    }
-}
-*/
 .sfa-text-editor-generated ul, .sfa-text-editor-generated ol {
   padding: 0;
   margin-top: 5px;
@@ -248,27 +257,6 @@ Text editor generated text
   font-weight: 700; }
 
 /* -------------------------------------------------------------------
-Forced Margin and Padding
-------------------------------------------------------------------- */
-.sfa-p-margin-bottom {
-  margin-bottom: 1.05263em; }
-
-.sfa-no-margins {
-  margin: 0 !important; }
-
-.sfa-no-right-margin {
-  margin-right: 0 !important; }
-
-.sfa-no-left-margin {
-  margin-left: 0 !important; }
-
-.sfa-no-bottom-margin {
-  margin-bottom: 0 !important; }
-
-.sfa-no-top-margin {
-  margin-top: 0 !important; }
-
-/* -------------------------------------------------------------------
 Alignment
 ------------------------------------------------------------------- */
 .sfa-align-right {
@@ -285,6 +273,38 @@ Alignment
   @media (min-width: 641px) {
     .sfa-pull-right-tablet {
       float: right !important; } }
+
+/* -------------------------------------------------------------------
+Custom expand content
+------------------------------------------------------------------- */
+@media (max-width: 640px) {
+  .sfa-mob-collpanel-trigger:after {
+    content: " ▼";
+    display: inline-block;
+    font-size: 12px;
+    height: 14px;
+    padding-left: 10px;
+    vertical-align: middle; }
+  .sfa-mob-collpanel-trigger.triggered:after {
+    content: " ▲"; } }
+
+@media (max-width: 640px) {
+  .sfa-mob-collpanel.panel-open {
+    display: block; } }
+
+.sfa-collpanel-trigger:after {
+  content: " ▼";
+  display: inline-block;
+  font-size: 12px;
+  height: 14px;
+  padding-left: 10px;
+  vertical-align: middle; }
+
+.sfa-collpanel-trigger.triggered:after {
+  content: " ▲"; }
+
+.sfa-collpanel.panel-open {
+  display: block; }
 
 /* -------------------------------------------------------------------
 Misc - TO BE ORGANISED
@@ -375,21 +395,6 @@ iframe, object, embed {
 @media (max-width: 641px) {
   .toggle-content--mob {
     display: none; } }
-
-@media (max-width: 640px) {
-  .mob-collpanel-trigger:after {
-    content: " ▼";
-    display: inline-block;
-    font-size: 12px;
-    height: 14px;
-    padding-left: 10px;
-    vertical-align: middle; }
-  .mob-collpanel-trigger.triggered:after {
-    content: " ▲"; } }
-
-@media (max-width: 640px) {
-  .mob-collpanel.panel-open {
-    display: block; } }
 
 .govuk-related-items {
   border-top: 10px solid #005ea5;
@@ -2653,6 +2658,7 @@ textarea {
   line-height: 1.25;
   width: 100%;
   padding: 5px 4px 4px;
+  color: inherit;
   background-color: transparent;
   border: 2px solid; }
   @media (min-width: 641px) {
@@ -2725,7 +2731,9 @@ textarea.form-control {
   position: relative;
   padding: 8px 10px 9px 50px;
   margin-bottom: 10px;
-  cursor: pointer; }
+  cursor: pointer;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation; }
   @media (min-width: 641px) {
     .block-label {
       float: left;
@@ -2928,13 +2936,13 @@ input[type=number] {
   .breadcrumbs a {
     color: #0b0c0c; }
 
-.phase-banner-alpha {
+.phase-banner {
   padding: 10px 0 8px;
   border-bottom: 1px solid #bfc1c3; }
   @media (min-width: 641px) {
-    .phase-banner-alpha {
+    .phase-banner {
       padding-bottom: 10px; } }
-  .phase-banner-alpha p {
+  .phase-banner p {
     display: table;
     margin: 0;
     color: #000;
@@ -2944,10 +2952,10 @@ input[type=number] {
     font-size: 14px;
     line-height: 1.14286; }
     @media (min-width: 641px) {
-      .phase-banner-alpha p {
+      .phase-banner p {
         font-size: 16px;
         line-height: 1.25; } }
-  .phase-banner-alpha .phase-tag {
+  .phase-banner .phase-tag {
     display: -moz-inline-stack;
     display: inline-block;
     margin: 0 8px 0 0;
@@ -2961,21 +2969,24 @@ input[type=number] {
     letter-spacing: 1px;
     text-decoration: none;
     color: #fff;
-    background-color: #d53880; }
+    background-color: #005ea5; }
     @media (min-width: 641px) {
-      .phase-banner-alpha .phase-tag {
+      .phase-banner .phase-tag {
         font-size: 16px;
         line-height: 1.25; } }
-  .phase-banner-alpha span {
+  .phase-banner span {
     display: table-cell;
     vertical-align: baseline; }
 
+.phase-banner-alpha,
 .phase-banner-beta {
   padding: 10px 0 8px;
   border-bottom: 1px solid #bfc1c3; }
   @media (min-width: 641px) {
+    .phase-banner-alpha,
     .phase-banner-beta {
       padding-bottom: 10px; } }
+  .phase-banner-alpha p,
   .phase-banner-beta p {
     display: table;
     margin: 0;
@@ -2986,9 +2997,11 @@ input[type=number] {
     font-size: 14px;
     line-height: 1.14286; }
     @media (min-width: 641px) {
+      .phase-banner-alpha p,
       .phase-banner-beta p {
         font-size: 16px;
         line-height: 1.25; } }
+  .phase-banner-alpha .phase-tag,
   .phase-banner-beta .phase-tag {
     display: -moz-inline-stack;
     display: inline-block;
@@ -3003,11 +3016,13 @@ input[type=number] {
     letter-spacing: 1px;
     text-decoration: none;
     color: #fff;
-    background-color: #f47738; }
+    background-color: #005ea5; }
     @media (min-width: 641px) {
+      .phase-banner-alpha .phase-tag,
       .phase-banner-beta .phase-tag {
         font-size: 16px;
         line-height: 1.25; } }
+  .phase-banner-alpha span,
   .phase-banner-beta span {
     display: table-cell;
     vertical-align: baseline; }
